# prog-language

./: .gitignore  CMakeLists.txt  Domac_spec.md  LICENSE  Makefile  README.md  dmc.l  dmc.y  dmc_llvm_interpreter.py  exemplo.dmc  instrucoes.md  log.txt  support.c  test.dmc
